@@ -1,3 +1,9 @@
+2012-06-15  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* lib/framework.exp (clone_output): Protect from leading dash in
+	$message.
+	* runtest.exp (verbose): Likewise.
+
 2012-06-11  Tom Tromey  <tromey@redhat.com>
 
 	* doc/runtest.1: Update.
